style.css
header {
  background-color: black;
  color: #ffffff;
  font-size: 0.8rem;
}

.navbar {
  background: black;
}

.navbar-toggler {
  color: red;
}

h1 {
  color: black;
}

.display-4 {
  font-size: 4rem;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

.call-to-action-card {
  font-size: 1.5rem;
  padding: 2rem;
  /* Add shadows to create the "card" effect */
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
}

polygon {
  fill: gold;
}

.stars {
  margin-top: 0.5rem;
}

.logo {
  width: 4rem;
  height: 4rem;
}

.yell-logo {
  margin-bottom: 0.4rem;
}

/* // this is a white icon with 50% opacity */
.navbar-dark .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;..");
}

.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.custom-toggler.navbar-toggler {
  border-color: rgb(255, 255, 255);
}

.carousel-control-prev-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
}

.carousel-control-next-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
}

